--- a/Symfony/templates/pessoa/_delete_form.html.twig
+++ b/Symfony/templates/pessoa/_delete_form.html.twig
@@ -1,5 +1,5 @@
 <form method="post" action="{{ path('pessoa_delete', {'id': pessoa.id}) }}" onsubmit="return confirm('Deseja excluir esse cadastro?');">
     <input  type="hidden" name="_method" value="DELETE">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ pessoa.id) }}">
-    <button class="btn btn-danger">Delete</button>
+    <button class="btn btn-danger">Deletar</button>
 </form>
