--- a/Symfony/templates/pessoa/edit.html.twig
+++ b/Symfony/templates/pessoa/edit.html.twig
@@ -1,13 +1,45 @@
-{% extends 'base.html.twig' %}
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js" integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js" integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG" crossorigin="anonymous"></script>
 
-{% block title %}Edit Pessoa{% endblock %}
-
-{% block body %}
-    <h1>Edit Pessoa</h1>
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="#">Teste egSYS</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="{{ path('pessoa_new') }}">Cadastrar</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" href="{{ path('pessoa_index') }}">Listar</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/sorteador">Sorteador</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
+<br>
+<div class="card" style="width: 50rem;margin: 0 auto">
+    <div class="card-body">
+        <h5 class="card-title">Editar Cadastro</h5>
+        <div class="mb-3">
 
     {{ include('pessoa/_form.html.twig', {'button_label': 'Update'}) }}
+        </div>
+        <div class="row">
+            <div class="col">
+                <a class="btn btn-primary" href="{{ path('pessoa_index') }}">voltar para lista</a>
+            </div>
+            <div>
+                {{ include('pessoa/_delete_form.html.twig') }}
+            </div>
 
-    <a href="{{ path('pessoa_index') }}">back to list</a>
+    </div>
+</div>
 
-    {{ include('pessoa/_delete_form.html.twig') }}
-{% endblock %}
